--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.0",
-    "@angular/cdk": "^17.2.2",
-    "@angular/common": "^17.2.0",
-    "@angular/compiler": "^17.2.0",
-    "@angular/core": "^17.2.0",
+    "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.2",
+    "@angular/common": "^16.1.0",
+    "@angular/compiler": "^16.1.0",
+    "@angular/core": "^16.1.0",
     "@angular/fire": "^17.0.1",
-    "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.2.2",
-    "@angular/platform-browser": "^17.2.0",
-    "@angular/platform-browser-dynamic": "^17.2.0",
-    "@angular/platform-server": "^17.2.0",
-    "@angular/router": "^17.2.0",
-    "@angular/ssr": "^17.2.1",
+    "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.2",
+    "@angular/platform-browser": "^16.1.0",
+    "@angular/platform-browser-dynamic": "^16.1.0",
+    "@angular/platform-server": "^16.1.0",
+    "@angular/router": "^16.1.0",
+    "@angular/ssr": "^16.1.1",
+    "ag-grid-angular": "^31.2.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "firebase": "^10.8.1",
@@ -33,9 +34,9 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.1",
-    "@angular/cli": "^17.2.1",
-    "@angular/compiler-cli": "^17.2.0",
+    "@angular-devkit/build-angular": "^16.1.1",
+    "@angular/cli": "^16.1.1",
+    "@angular/compiler-cli": "^16.1.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
